--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=banco-digital
+spring.datasource.username=postgres
+spring.datasource.password=123
+server.port=8080
+spring.flyway.default-schema=banco-digital
